<resources>
    <string name="app_name">WaiaM</string>
    <string name="total_hoursworked">Hours Worked</string>
    <string name="action_settings">Settings</string>
    <string name="hint_timein">Time in...</string>
    <string name="hint_datein">Date in...</string>
    <string name="hint_timeout">Time out...</string>
    <string name="hint_dateout">Date out...</string>
    <string name="hint_earnings">Earnings...</string>
    <string name="hint_timenow">Set time as now</string>
    <string name="button_save">Save</string>
    <string name="pick_timein">Pick Time in</string>
    <string name="pick_datein">Pick Date in</string>
    <string name="pick_timeout">Pick Time out</string>
    <string name="pick_dateout">Pick Date out</string>
    <string name="pick_earnings">Pick Earnings...</string>
    <string name="picker_title">Title of Card</string>
    <string name="picker_content">Content</string>
    <string name="picker_inMain">Show in Main</string>


    <string name="hourly_wage">Hourly Wage</string>
    <string name="total_earnings">Total Earnings</string>

    <string name="show_datein">Time In</string>
    <string name="show_hours_worked">Hours Worked</string>
    <string name="show_earnings">Earnings</string>
    <string name="empty_not_saved">Income not saved because there are empty fields.</string>
    <string name="nightmode">Night Theme</string>
    <string name="title_activity_settings">Settings</string>
    <string name="delete_income_dialog">Are you sure you want to delete income?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_card_picker">Select Cards to Appear on Main Screen</string>
</resources>
